objects/PRX_SystemLog__c.object
<CustomObject>
    <description>Object used to hold exception details from trigger and class, implement PRX_SystemUtility class methods</description>
    <fields>
        <fullName>Log_Type__c</fullName>
        <description>Used to distinguish the type of log.</description>
        <label>Log Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UserLog</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Originating_Class_Name__c</fullName>
        <description>Used to capture the class name from where its logged</description>
        <label>Originating Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To capture the running user</description>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PRX_SystemLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Full stack trace of the exception(trim at 131000)</description>
        <label>Stack Trace</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>PRX_SystemLog</label>
    <nameField>
        <displayFormat>SL-{000000000}</displayFormat>
        <label>PRX_SystemLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRX_SystemLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>